wxc/include/ewxw/wxc_glue.h

/* wxJoystick */
TClassDefExtend(wxJoystick,wxObject)
TClass(wxJoystick) wxJoystick_Create( int joystick );
void       wxJoystick_Delete( TSelf(wxJoystick) _obj );
int        wxJoystick_GetButtonState( TSelf(wxJoystick) _obj );
int        wxJoystick_GetManufacturerId( TSelf(wxJoystick) _obj );
int        wxJoystick_GetMaxAxes( TSelf(wxJoystick) _obj );
int        wxJoystick_GetMaxButtons( TSelf(wxJoystick) _obj );
int        wxJoystick_GetMovementThreshold( TSelf(wxJoystick) _obj );
int        wxJoystick_GetNumberAxes( TSelf(wxJoystick) _obj );
int        wxJoystick_GetNumberButtons( TSelf(wxJoystick) _obj );
int        wxJoystick_GetNumberJoysticks( TSelf(wxJoystick) _obj );
int        wxJoystick_GetPOVCTSPosition( TSelf(wxJoystick) _obj );
int        wxJoystick_GetPOVPosition( TSelf(wxJoystick) _obj );
int        wxJoystick_GetPollingMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetPollingMin( TSelf(wxJoystick) _obj );
void       wxJoystick_GetPosition( TSelf(wxJoystick) _obj, TPointOutVoid(_x,_y) );
int        wxJoystick_GetProductId( TSelf(wxJoystick) _obj );
TStringLen wxJoystick_GetProductName( TSelf(wxJoystick) _obj, TStringOutVoid _buf );
int        wxJoystick_GetRudderMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetRudderMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetRudderPosition( TSelf(wxJoystick) _obj );
int        wxJoystick_GetUMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetUMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetUPosition( TSelf(wxJoystick) _obj );
int        wxJoystick_GetVMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetVMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetVPosition( TSelf(wxJoystick) _obj );
int        wxJoystick_GetXMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetXMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetYMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetYMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetZMax( TSelf(wxJoystick) _obj );
int        wxJoystick_GetZMin( TSelf(wxJoystick) _obj );
int        wxJoystick_GetZPosition( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasPOV( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasPOV4Dir( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasPOVCTS( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasRudder( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasU( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasV( TSelf(wxJoystick) _obj );
TBool      wxJoystick_HasZ( TSelf(wxJoystick) _obj );
TBool      wxJoystick_IsOk( TSelf(wxJoystick) _obj );
int        wxJoystick_ReleaseCapture( TSelf(wxJoystick) _obj );
int        wxJoystick_SetCapture( TSelf(wxJoystick) _obj, TClass(wxWindow) win, int pollingFreq );
void       wxJoystick_SetMovementThreshold( TSelf(wxJoystick) _obj, int threshold );